--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #0D1117;
+}
+
 .all-repos {
   width: 90%;
   max-width: 800px;
@@ -9,29 +13,55 @@
   list-style: none;
   margin-top: 2rem;
   padding: 2rem;
+  justify-content: center;
 }
 
 .page-numbers li {
   padding: 0.5rem 1rem;
-  border: 1px solid #ccc;
+  border: 1px solid #30363d;
+  border-radius: 8px;
+  margin: auto 5px;
   cursor: pointer;
+  color: #ccc;
 }
 
 .page-numbers li.active {
-  background-color: #777;
-  color: #ccc;
-}
-.repo {
-  cursor: pointer;
-  margin: 0 0.8rem;
-  margin-top: 1rem;
-  padding: 1rem;
-  border-radius: 8px;
-  background-color: rgb(103, 103, 103);
+  background-color: #222a35;
   color: #ccc;
 }
 
+.page-numbers li:hover {
+  background-color: #3b4148;
+
+
+}
+
+.repo {
+  cursor: pointer;
+  margin: 0 0.8rem;
+  margin-top: 1.5rem;
+  padding: 1rem;
+  border-radius: 8px;
+  border: 1px solid #30363d;
+  /* background-color: rgb(103, 103, 103); */
+  color: #ccc;
+  transition: all ease-in .3s;
+}
+
+.repo:hover {
+  background-color: #161B22;
+
+}
 .repo p:nth-child(1) {
   font-weight: 600;
   margin-bottom: 0.8rem;
 }
+
+.repo-name:hover {
+cursor: pointer;
+}
+
+
+.repo-full-name:hover {
+  cursor: pointer;
+  }
